--- a/.github/workflows/publish_docker_files.yml
+++ b/.github/workflows/publish_docker_files.yml
@@ -45,3 +45,4 @@ jobs:
           push: true
           tags: latest
           labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/amd64,linux/arm64
