--- a/.github/workflows/publish_docker_files.yml
+++ b/.github/workflows/publish_docker_files.yml
@@ -46,3 +46,5 @@ jobs:
           tags: latest
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64,linux/arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
