--- a/.github/workflows/publish_docker_files.yml
+++ b/.github/workflows/publish_docker_files.yml
@@ -51,3 +51,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          provenance: false
