--- a/.github/workflows/publish_docker_files.yml
+++ b/.github/workflows/publish_docker_files.yml
@@ -46,8 +46,7 @@ jobs:
           context: .
           file: ./goland_alpine.Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ github.repository }}/goland-alpine:latest
           platforms: linux/amd64,linux/arm64
           cache-from: type=gha
           cache-to: type=gha,mode=max
